Add more documentation

--- a/docs/ScientificApplication/PaperNB.ipynb
+++ b/docs/ScientificApplication/PaperNB.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 1,
    "id": "f15623fe",
    "metadata": {},
    "outputs": [
@@ -114,7 +114,7 @@
     "    cbar.ax.set_yticklabels([\"N/A\", \"None\", \"Informational\", \"Low\", \"Medium\", \"High\", \"Critical\"])\n",
     "    \n",
     "    plt.tight_layout()\n",
-    "    plt.savefig(\"images/\"+name+\".svg\", bbox_inches=\"tight\")\n",
+    "    plt.savefig(\"images/\"+name+\".pdf\", format=\"pdf\", bbox_inches=\"tight\")\n",
     "    plt.show()\n",
     "\n",
     "create_from_csv(\"eval_team6_run2\")\n"
@@ -122,7 +122,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 2,
    "id": "88cdd2eb",
    "metadata": {},
    "outputs": [
@@ -143,7 +143,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 3,
    "id": "b307b309",
    "metadata": {},
    "outputs": [
@@ -164,7 +164,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 4,
    "id": "519ad852",
    "metadata": {},
    "outputs": [
@@ -265,7 +265,7 @@
     "        frameon=False\n",
     "    )\n",
     "    plt.tight_layout()\n",
-    "    plt.savefig(\"images/mitre_\"+name+\".svg\", bbox_inches=\"tight\")\n",
+    "    plt.savefig(\"images/mitre_\"+name+\".pdf\", format=\"pdf\", bbox_inches=\"tight\")\n",
     "    plt.show()\n",
     "\n",
     "\n",
@@ -274,7 +274,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 5,
    "id": "d3df0ac5",
    "metadata": {},
    "outputs": [
@@ -295,7 +295,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 6,
    "id": "3b208d41",
    "metadata": {},
    "outputs": [
